tests/ui/invalid_type_wchz.stderr
error: unexpected wchar type `f32`, expected one of: u16, u32, i16, i32
 --> $DIR/invalid_type_wchz.rs:3:31
  |
3 | const INVALID: &[f32] = wchz!(f32, "oops");
  |                               ^^^
