tests/ui/invalid_type_wchz.rs
use wchar::wchz;

const INVALID: &[f32] = wchz!(f32, "oops");

fn main() {}
